# product-etl-webscraper

./: .dockerignore  .env.exemple  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
extractors/: ebay.py
src/: ebay_data_extrat.py  web_scraper.py
